[package]
name = "columnation"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.6"
memmap2 = "0.5.8"
tempfile = "3.3.0"
libc = "0.2.137"

[profile.bench]
debug = 1
