[package]
name = "columnation"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
memmap2 = "0.9"
tempfile = "3.8.0"
libc = "0.2.149"
crossbeam-channel = "0.5.8"

[profile.bench]
debug = 1
codegen-units = 1
lto = true
