[package]
name = "columnation"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Unsafe columnar containers for native Rust types"
edition = "2018"

# These URLs point to more information about the repository
documentation = "http://github.com/frankmcsherry/columnation"
homepage = "http://github.com/frankmcsherry/columnation"
repository = "https://github.com/frankmcsherry/columnation.git"
license = "MIT"

[dependencies]
paste = "1.0.6"
